--- a/Cultivating Green Minds The Impact of Green Education and Awareness Campaigns.html
+++ b/Cultivating Green Minds The Impact of Green Education and Awareness Campaigns.html
@@ -264,7 +264,7 @@
                     </div>
 
                     <div class="author-section bg-light p-4 mb-4">
-                        <img src="Fizza Image.jpeg" class="img-fluid rounded-circle mb-3" alt="Author">
+                        <img src="Images/Fizza Image.jpeg" class="img-fluid rounded-circle mb-3" alt="Author">
                         <h4>Author: Fizza Ejaz</h4>
                         <p class="text-muted text-justify">Hello, I'm Fizza Ejaz, a dedicated geographer with a passion
                             for exploring the world through technology. I hold a Master's degree in Geography with a
@@ -329,7 +329,7 @@
                                 </h4>
                                 <p class="card-text">EcoAware Insights: Unveiling the layers of environmental insight to
                                     empower you with the knowledge needed for a greener future.</p>
-                                <a href="first_blog.html" class="btn btn-primary">Read More</a>
+                                <a href="EcoAware Insights Navigating the Environmental Landscape.html" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -342,7 +342,7 @@
                                     remote sensing,
                                     exploring its applications, technologies, and the profound insights it offers into
                                     the world around us.</p>
-                                <a href="2nd_blog.html" class="btn btn-primary">Read More</a>
+                                <a href="RemoteSensing Unveiled Capturing Earth from A far.html" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                     </div>
