--- a/GIS Insights Mapping the Digital Landscape.html
+++ b/GIS Insights Mapping the Digital Landscape.html
@@ -193,7 +193,7 @@
                     </div>
 
                     <div class="author-section bg-light p-4 mb-4">
-                        <img src="Asad.jpg" class="img-fluid rounded-circle mb-3" alt="Author">
+                        <img src="Images/Asad.jpg" class="img-fluid rounded-circle mb-3" alt="Author">
                         <h4>Author: Asad Maqsoom</h4>
                         <p class="text-muted">Geospatial Analyst with expertise in GIS, remote sensing, and cartography.
                             Master's
@@ -243,7 +243,7 @@
                                 <p class="card-text"> In this blog post, we embark on a journey to unveil the
                                     significance of geography, its diverse branches, and the insights it offers into the
                                     tapestry of our world.</p>
-                                <a href="4th_blog.html" class="btn btn-primary">Read More</a>
+                                <a href="Geography Insightful Discovering the World One Place at a Time.html" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -254,7 +254,7 @@
                                 <h5 class="card-title">EcoAware Insights: Navigating the Environmental Landscape</h5>
                                 <p class="card-text">EcoAware Insights: Unveiling the layers of environmental insight to
                                     empower you with the knowledge needed for a greener future.</p>
-                                <a href="first_blog.html" class="btn btn-primary">Read More</a>
+                                <a href="EcoAware Insights Navigating the Environmental Landscape.html" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -267,7 +267,7 @@
                                     remote sensing,
                                     exploring its applications, technologies, and the profound insights it offers into
                                     the world around us.</p>
-                                <a href="2nd_blog.html" class="btn btn-primary">Read More</a>
+                                <a href="RemoteSensing Unveiled Capturing Earth from A far.html" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                     </div>
