--- a/Geography Insightful Discovering the World One Place at a Time.html
+++ b/Geography Insightful Discovering the World One Place at a Time.html
@@ -196,7 +196,7 @@
                     </div>
 
                     <div class="author-section bg-light p-4 mb-4">
-                        <img src="Asad.jpg" class="img-fluid rounded-circle mb-3" alt="Author">
+                        <img src="Images/Asad.jpg" class="img-fluid rounded-circle mb-3" alt="Author">
                         <h4>Author: Asad Maqsoom</h4>
                         <p class="text-muted">Geospatial Analyst with expertise in GIS, remote sensing, and cartography.
                             Master's
@@ -247,7 +247,7 @@
                                     we unravel the power of Geographic Information Systems, their myriad applications
                                     across industries, and
                                     the art of spatial storytelling that breathes life into data.</p>
-                                <a href="3rd_blog.html" class="btn btn-primary">Read More</a>
+                                <a href="GIS Insights Mapping the Digital Landscape.html" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -258,7 +258,7 @@
                                 <h5 class="card-title">EcoAware Insights: Navigating the Environmental Landscape</h5>
                                 <p class="card-text">EcoAware Insights: Unveiling the layers of environmental insight to
                                     empower you with the knowledge needed for a greener future.</p>
-                                <a href="first_blog.html" class="btn btn-primary">Read More</a>
+                                <a href="EcoAware Insights Navigating the Environmental Landscape.html" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -271,7 +271,7 @@
                                     remote sensing,
                                     exploring its applications, technologies, and the profound insights it offers into
                                     the world around us.</p>
-                                <a href="2nd_blog.html" class="btn btn-primary">Read More</a>
+                                <a href="RemoteSensing Unveiled Capturing Earth from A far.html" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                     </div>
