--- a/RemoteSensing Unveiled Capturing Earth from A far.html
+++ b/RemoteSensing Unveiled Capturing Earth from A far.html
@@ -242,7 +242,7 @@
                                 <p class="card-text"> In this blog post, we embark on a journey to unveil the
                                     significance of geography, its diverse branches, and the insights it offers into the
                                     tapestry of our world.</p>
-                                <a href="4th_blog.html" class="btn btn-primary">Read More</a>
+                                <a href="Geography Insightful Discovering the World One Place at a Time.html" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -253,7 +253,7 @@
                                 <h5 class="card-title">EcoAware Insights: Navigating the Environmental Landscape</h5>
                                 <p class="card-text">EcoAware Insights: Unveiling the layers of environmental insight to
                                     empower you with the knowledge needed for a greener future.</p>
-                                <a href="first_blog.html" class="btn btn-primary">Read More</a>
+                                <a href="EcoAware Insights Navigating the Environmental Landscape.html" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -267,7 +267,7 @@
                                     we unravel the power of Geographic Information Systems, their myriad applications
                                     across industries, and
                                     the art of spatial storytelling that breathes life into data.</p>
-                                <a href="3rd_blog.html" class="btn btn-primary">Read More</a>
+                                <a href="GIS Insights Mapping the Digital Landscape.html" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                     </div>
