--- a/Why Sustainable Energy Sources Are Vital for Our Future.html
+++ b/Why Sustainable Energy Sources Are Vital for Our Future.html
@@ -196,7 +196,7 @@
         <div class="container my-5">
             <div class="row">
                 <div class="col-lg-8">
-                    <img src="Sustainable Energy.jpg" class="img-fluid rounded mb-4" alt="GIS">
+                    <img src="Images/Sustainable Energy.jpg" class="img-fluid rounded mb-4" alt="GIS">
                     <p class="text-justify">
                         In our modern world, the demand for energy continues to soar. However, the way we produce energy
                         plays a pivotal role in shaping our future. Sustainable energy sources have emerged as the key
@@ -303,7 +303,7 @@
                             <div class="card-body">
                                 <h4 class="card-title"><b>Cultivating Green Minds: The Impact of Green Education and Awareness Campaigns</b></h4>
                                 <p class="card-text">The importance of a green environment cannot be overstated. A lush, thriving ecosystem directly contributes to our well-being and quality of life. It purifies the air we breathe, provides habitats for diverse flora and fauna, and supports biodiversity crucial for ecological balance. A green environment also aids in mitigating climate change, acting as a natural carbon sink. Preserving and nurturing green spaces is an investment in a sustainable, healthy future for both humanity and the planet.</p>
-                                <a href="6th_blog.html" class="btn btn-primary">Read More</a>
+                                <a href="Cultivating Green Minds The Impact of Green Education and Awareness Campaigns.html" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -314,7 +314,7 @@
                                 <h4 class="card-title"><b>EcoAware Insights: Navigating the Environmental Landscape</b></h4>
                                 <p class="card-text">EcoAware Insights: Unveiling the layers of environmental insight to
                                     empower you with the knowledge needed for a greener future.</p>
-                                <a href="first_blog.html" class="btn btn-primary">Read More</a>
+                                <a href="EcoAware Insights Navigating the Environmental Landscape.html" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -327,7 +327,7 @@
                                     remote sensing,
                                     exploring its applications, technologies, and the profound insights it offers into
                                     the world around us.</p>
-                                <a href="2nd_blog.html" class="btn btn-primary">Read More</a>
+                                <a href="RemoteSensing Unveiled Capturing Earth from A far.html" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                     </div>
