--- a/EcoAware Insights Navigating the Environmental Landscape.html
+++ b/EcoAware Insights Navigating the Environmental Landscape.html
@@ -193,7 +193,7 @@
           </div>
 
           <div class="author-section bg-light p-4 mb-4">
-            <img src="Asad.jpg" class="img-fluid rounded-circle mb-3" alt="Author">
+            <img src="Images/Asad.jpg" class="img-fluid rounded-circle mb-3" alt="Author">
             <h4>Author: Asad Maqsoom</h4>
             <p class="text-muted">Geospatial Analyst with expertise in GIS, remote sensing, and cartography. Master's
               degree holder in Geography, currently pursuing Mphil. Experienced with prestigious institutions like
@@ -238,7 +238,7 @@
                 <h5 class="card-title">Geography Insightful: Discovering the World One Place at a Time</h5>
                 <p class="card-text"> In this blog post, we embark on a journey to unveil the significance of geography,
                   its diverse branches, and the insights it offers into the tapestry of our world.</p>
-                <a href="4th_blog.html" class="btn btn-primary">Read More</a>
+                <a href="Geography Insightful Discovering the World One Place at a Time.html" class="btn btn-primary">Read More</a>
               </div>
             </div>
           </div>
@@ -250,7 +250,7 @@
                 <p class="card-text">In this blog post, we embark on a journey to unveil the wonders of remote sensing,
                   exploring its applications, technologies, and the profound insights it offers into the world around
                   us.</p>
-                <a href="2nd_blog.html" class="btn btn-primary">Read More</a>
+                <a href="RemoteSensing Unveiled Capturing Earth from A far.html" class="btn btn-primary">Read More</a>
               </div>
             </div>
           </div>
@@ -263,7 +263,7 @@
                   we unravel the power of Geographic Information Systems, their myriad applications across industries,
                   and
                   the art of spatial storytelling that breathes life into data.</p>
-                <a href="3rd_blog.html" class="btn btn-primary">Read More</a>
+                <a href="GIS Insights Mapping the Digital Landscape.html" class="btn btn-primary">Read More</a>
               </div>
             </div>
           </div>
