update all blogs

--- a/Blog.html
+++ b/Blog.html
@@ -86,7 +86,7 @@
           multifaceted effects of climate change on urbanization, exploring its implications and the strategies cities
           can adopt to adapt and thrive in the face of these challenges.</p>
         <!-- <p class="lead mb-0"><a href="first_blog.html" class="text-body-emphasis fw-bold">Continue reading...</a></p> -->
-        <p class="lead mb-0"><a href="Blogs/EcoAware Insights Navigating the Environmental Landscape.html" class="text-body-emphasis fw-bold">Continue reading...</a></p>
+        <p class="lead mb-0"><a href="EcoAware Insights Navigating the Environmental Landscape.html" class="text-body-emphasis fw-bold">Continue reading...</a></p>
       </div>
     </div>
     <div class="row mb-2">
@@ -99,7 +99,7 @@
             <p class="card-text mb-auto">Explore the dynamic realm of GIS Insights: Mapping the Digital Landscape, where
               we unravel the power of Geographic Information Systems, their myriad applications across industries, and
               the art of spatial storytelling that breathes life into data.</p>
-            <a href="Blogs/GIS Insights Mapping the Digital Landscape.html" class="icon-link gap-1 icon-link-hover stretched-link">
+            <a href="GIS Insights Mapping the Digital Landscape.html" class="icon-link gap-1 icon-link-hover stretched-link">
               Continue reading
             </a>
           </div>
@@ -114,7 +114,7 @@
             <p class="mb-auto">In this blog post, we embark on a journey to unveil the wonders of remote sensing,
               exploring its applications, technologies, and the profound insights it offers into the world around us.
             </p>
-            <a href="Blogs/RemoteSensing Unveiled Capturing Earth from A far.html" class="icon-link gap-1 icon-link-hover stretched-link">
+            <a href="RemoteSensing Unveiled Capturing Earth from A far.html" class="icon-link gap-1 icon-link-hover stretched-link">
               Continue reading
             </a>
           </div>
