update Course.html, add javascript files, RPD

--- a/course.html
+++ b/course.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="style_blog.css">
+  <link rel="stylesheet" href="css/style_blog.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <style>
@@ -31,7 +31,7 @@
       <div class="container-fluid">
         <a class="navbar-brand ml-3" href="index.html">GeoCoderX</a>
         <button class="navbar-toggler mx-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -107,60 +107,18 @@
         <a class="nav-link ms-3 my-1 text-danger" href="#A-Brief-History-of-GIS">Renewable Energy Solutions for a
           Greener Planet</a>
       </nav>
-      <!-- <a class="nav-link fw-bold" href="#Elements-of-GIS">Elements of GIS</a>
-      <nav class="nav nav-pills flex-column ">
-        <a class="nav-link ms-3 my-1  text-danger" href="#Geospatial-Data">Geospatial Data</a>
-        <a class="nav-link ms-3 my-1  text-danger" href="#Data-Acquisition">Data Acquisition</a>
-        <a class="nav-link ms-3 my-1  text-danger" href="#Data-Display">Data Display</a>
-        <a class="nav-link ms-3 my-1  text-danger" href="#Data-Exploration">Data Exploration</a>
-        <a class="nav-link ms-3 my-1  text-danger" href="#Data-Analysis">Data Analysis</a>
-        <a class="nav-link fw-bold" href="#Applications-of-GIS">Applications of GIS</a>
-        <nav class="nav nav-pills flex-column">
-          <a class="nav-link ms-3 my-1 text-danger" href="#List-of-GIS-Applications">List of GIS Applications</a>
-          <a class="nav-link fw-bold" href="#COORDINATE-SYSTEMS">COORDINATE SYSTEMS</a>
-          <nav class="nav nav-pills flex-column">
-            <a class="nav-link ms-3 my-1 text-danger" href="#Geographic-Coordinate System">Geographic Coordinate
-              System</a>
-            <a class="nav-link ms-3 my-1 text-danger" href="#Datum">Datum</a>
-            <a class="nav-link ms-3 my-1 text-danger" href="#NAD27-and-NAD83">NAD27 and NAD83</a>
-            <a class="nav-link ms-3 my-1 text-danger" href="#Datum-Accuracy">Datum Accuracy</a>
-            <a class="nav-link ms-3 my-1 text-danger" href="#WGS84">WGS84</a>
-            <a class="nav-link ms-3 my-1 text-danger" href="#Map-Projections">Map Projections</a>
-            <a class="nav-link ms-3 my-1 text-danger" href="#Types-of-Map-Projections">Types of Map Projections</a>
-            <a class="nav-link ms-3 my-1 text-danger" href="#Map-Projection-Parameters">Map Projection Parameters</a>
-            <a class="nav-link fw-bold" href="#Commonly-Used-Map-Projections">Commonly Used Map Projections</a>
-            <a class="nav-link ms-3 my-1 text-danger" href="#Transverse-Mercator">Transverse Mercator</a>
-            <a class="nav-link ms-3 my-1 text-danger" href="#Lambert-Conformal-Conic">Lambert Conformal Conic</a>
-            <a class="nav-link ms-3 my-1 text-danger" href="#Equidistant-Conic">Equidistant Conic</a>
-            <a class="nav-link ms-3 my-1 text-danger" href="#Albers-Equal-Area-Conic">Albers Equal-Area Conic</a>
-            <a class="nav-link ms-3 my-1 text-danger" href="#Web-Mercator">Web Mercator</a>
-            <a class="nav-link fw-bold" href="#Projected-Coordinate-Systems">Projected Coordinate Systems</a>
-            <nav class="nav nav-pills flex-column">
-              <a class="nav-link ms-3 my-1 text-danger" href="#Projected-Coordinate-Systems">Projected Coordinate
-                Systems</a>
-              <a class="nav-link ms-3 my-1 text-danger" href="#The-Universal-Transverse-Mercator-Grid-System">The
-                Universal Transverse Mercator Grid System</a>
-              <a class="nav-link ms-3 my-1 text-danger" href="#The-Universal-Polar-Stereographic Grid-System">The
-                Universal Polar Stereographic Grid System</a>
-              <a class="nav-link ms-3 my-1 text-danger" href="#The-State-Plane-Coordinate-System">The State Plane
-                Coordinate System</a>
-              <a class="nav-link ms-3 my-1 text-danger" href="#The-Public-Land-Survey-System">The Public Land Survey
-                System</a> -->
     </nav>
     </nav>
 
   </div>
   </div>
   <!-- End vertical navbar -->
-
-
   <!-- Page content holder -->
   <div class="page-content p-5" id="content">
     <!-- Toggle button -->
     <button id="sidebarCollapse" type="button" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4"><i
         class="fa fa-bars mr-2"></i><small class="text-uppercase font-weight-bold">Table of content</small></button>
-
-    <!-- Demo content -->
+    <!-- Main content -->
     <h2 class="display-4 text-white">The Impact of Climate Change on Urbanization: Navigating the New Normal</h2>
     <p class="lead text-white mb-0">In an era marked by rapid urbanization and shifting climate patterns, the symbiotic
       relationship between urban areas and climate change has gained prominence. Climate change has emerged as a
@@ -173,148 +131,8 @@
     <div class="row text-white">
       <div class="col-lg-12">
         <div id="gis">
-          <!-- <h4>GIS</h4>
-          <p>
-            <b>GIS</b> stands for Geographic Information System. It is a type of computer system that is used to store,
-            analyze, and visualize geospatial data. GIS systems are used in a wide range of industries and applications,
-            including mapping, surveying, urban planning, natural resource management, and many others. GIS systems
-            typically include software tools for creating and manipulating maps, storing and querying geospatial data,
-            and
-            performing spatial analysis and visualization. GIS technology is increasingly being used to solve real-world
-            problems and to support decision-making in various fields.<b>GIS</b> allows users to create
-            <i><b>interactive
-                queries</b></i>, <i><b>analyze spatial information</b></i>, <i><b>edit data in maps</b></i>, and present
-            the
-            results of all these operations. Some examples of the types of data that can be stored and analyzed in a GIS
-            include <i><b>maps</b></i>, <i><b>satellite imagery</b></i>, <i><b>demographic data</b></i>, and
-            <i><b>statistical data</b></i> . GIS is often used in a variety of fields, such as <b>geography</b>,
-            <b>forestry</b>, <b>cartography</b>, <b>land use planning</b>, and many others.
-          </p>
+
           <div class="container">
-            <p>
-            <div class="row">
-              <div class="col-md-6">
-                <img
-                  src="https://media.istockphoto.com/id/1287252720/photo/man-using-mobile-map-app-next-to-the-lake.jpg?b=1&s=170667a&w=0&k=20&c=4EF6H6fVr6oaUNoPjUlfe6iYyJCplGPscmtIVJYfXeg="
-                  alt="Image 1" class="img-fluid">
-              </div>
-              <div class="col-md-6">
-                <img
-                  src="https://media.istockphoto.com/id/1361253560/photo/location-pin-icon-on-earth-and-green-grass-in-geographic-information-system-concept.jpg?b=1&s=170667a&w=0&k=20&c=oACUSl_fHD_kM9bbeCCMYTPlVi36GKmYBeWdHYT4KwI="
-                  height="340px" alt="Image 2" class="img-fluid">
-              </div> -->
-          <div class="container">
-            <!-- <p>
-                  <div class="row">
-                    <div class="col-md-6">
-                      <img src="1.jpg" alt="Image 1" class="img-fluid">
-                    </div>
-                    <div class="col-md-6">
-                      <img src="2.jpg" alt="Image 2" class="img-fluid">
-                    </div>
-                  </div>
-                  </p>
-                </div>
-              </div>
-            </div>
-            </p> -->
-
-            <!-- <img src="1.jpg" class="rounded mx-3 my-2 d-block img-fluid" width="500" alt="...">
-              <img src="1.jpg" class="rounded mx-3 my-2 d-block img-fluid start" width="500" alt="..."> -->
-            </p>
-
-            <!-- <div id="Components-of-GIS">
-                  <h5>Components of a GIS</h5>
-                  <p>
-                    There are several components that make up a GIS:
-                  <ol>
-                    <li>
-                      <p><b>Hardware:</b>This includes the computer hardware and peripherals, such as scanners and
-                        printers, that
-                        are used to input, store, and output GIS data.</p>
-                    </li>
-                    <li>
-                      <p><b>Software:</b>This includes the programs and applications used to create, edit, analyze, and
-                        display GIS
-                        data. Examples of GIS software include ArcGIS, QGIS, and Google Earth.</p>
-                    </li>
-                    <li>
-                      <p><b>Data:</b>This includes the spatial and attribute data that is stored and analyzed in a GIS.
-                        Spatial data
-                        refers to data that has a geographic component, such as a map or satellite image. Attribute data
-                        refers to
-                        non-spatial data that is associated with a geographic feature, such as the population of a city
-                        or the type
-                        of land use in an area.</p>
-                    </li>
-                    <li>
-                      <p><b>People:</b>This includes the individuals who use the GIS, such as GIS analysts,
-                        cartographers, and
-                        geographers, as well as those who create and maintain the GIS data.</p>
-                    </li>
-                    <li>
-                      <p><b> Procedures:</b>This includes the processes and methods used to input, manipulate, analyze,
-                        and output
-                        GIS data.</p>
-                    </li>
-                    <li>
-                      <p><b>Documentation:</b>This includes the manuals, user guides, and other documentation related to
-                        the GIS
-                        software and data.</p>
-                    </li>
-
-                  </ol>
-                </div>
-                <div id="A-Brief-History-of-GIS">
-                  <h5>A Brief History of GIS</h5>
-                  <div class="points">
-                    <ol>
-                      <li>
-                        <p><b>1960s:</b>The term "geographic information system" is coined by Roger Tomlinson.</p>
-                      </li>
-                      <li>
-                        <p><b>Late 1960s and early 1970s:</b>GIS technology begins to emerge, with the development of
-                          computer
-                          technology and geographic data models.</p>
-                      </li>
-                      <li>
-                        <p><b>1980s and 1990s:</b>GIS becomes more widely used in various industries, including
-                          forestry, utilities,
-                          and the military.</p>
-                      </li>
-                      <li>
-                        <p><b>1990s:</b>The development of geographic data infrastructure (GDI) makes it easier to share
-                          and
-                          integrate spatial data.</p>
-                      </li>
-                      <li>
-                        <p><b>2000s:</b>GIS becomes more widely used in various fields and by businesses, governments,
-                          and other
-                          organizations.</p>
-                      </li>
-                      <li>
-                        <p><b>2010s: </b>GIS becomes more accessible and user-friendly, with the development of
-                          cloud-based GIS and
-                          the proliferation of GIS apps.</p>
-                      </li>
-                      <li>
-                        <p><b>2020s: </b>GIS continues to evolve, with the increasing use of artificial intelligence and
-                          machine
-                          learning in GIS applications.</p>
-                      </li>
-                    </ol>
-                  </div>
-                </div>
-              </div>
-              <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                <button class="btn btn-primary me-md-2 bg-dark text-white" type="button"><a href="#">Back</a></button>
-                <button class="btn btn-primary bg-dark text-denger" type="button"><a
-                    href="Elements-of-GIS.html">Next</a></button>
-              </div> -->
-            <!-- <div class="navigation col-12 col-lg-12 container-fluid ">
-                <a href="#">Back</a>
-                <a href="Elements-of-GIS.html">Next</a>
-              </div> -->
             <!DOCTYPE html>
             <html>
 
@@ -323,9 +141,6 @@
             </head>
 
             <body>
-
-
-
               <h2>The Urban Heat Island Effect: Escalating Temperatures in Cities</h2>
 
               <p>As climate change intensifies, urban areas are grappling with the notorious "urban heat island" effect.
@@ -378,16 +193,13 @@
                 blueprint for resilient urbanization in the face of a changing climate. By acknowledging the intricate
                 interplay between climate change and urban development, we can lay the groundwork for a more sustainable
                 and secure urban future.</p>
-
             </body>
 
             </html>
-
           </div>
         </div>
       </div>
     </div>
-
   </div>
   <!-- End demo content -->
   <!-- FOOTER -->
@@ -407,7 +219,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
-  <script src="main.js"></script>
+  <script src="javascript/main.js"></script>
 
 </body>
 
