Add Gallery nav

--- a/EcoAware Insights Navigating the Environmental Landscape.html
+++ b/EcoAware Insights Navigating the Environmental Landscape.html
@@ -113,7 +113,7 @@
               </li>
             </ul>
             <li class="nav-item">
-              <a class="nav-link special-link" href="Articles.html">Articles</a>
+              <a class="nav-link special-link" href="Gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
               <a class="nav-link special-link" href="Blog.html">Blogs</a>
