--- a/Gallery.html
+++ b/Gallery.html
@@ -58,7 +58,7 @@
                             </li>
                         </ul>
                         <li class="nav-item">
-                            <a class="nav-link special-link" href="Articles.html">Articles</a>
+                            <a class="nav-link special-link" href="Gallery.html">Gallery</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link special-link" href="Blog.html">Blogs</a>
@@ -83,7 +83,7 @@
     <main class="container">
         <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
             <div class="col-lg-6 px-0 pt-3">
-                <h1 class="display-4 fst-italic">This section for Articles</h1>
+                <h1 class="display-4 fst-italic">This section for Gallery</h1>
 
 
     </main>
