--- a/Gallery.html
+++ b/Gallery.html
@@ -29,8 +29,9 @@
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark ">
             <div class="container-fluid">
                 <a class="navbar-brand ml-3" href="index.html">GeoCoderX</a>
-                <button class="navbar-toggler mx-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler mx-2" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -84,8 +85,6 @@
         <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
             <div class="col-lg-6 px-0 pt-3">
                 <h1 class="display-4 fst-italic">This section for Gallery</h1>
-
-
     </main>
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
         <div class="col-md-4 d-flex align-items-center">
@@ -96,30 +95,10 @@
             </a>
             <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Company, Inc</span>
         </div>
-
-        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-            <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
-                        <use xlink:href="#twitter"></use>
-                    </svg></a></li>
-            <li class="ms-3"><a class="text-body-secondary" href="Historical map.JPG"><img src="instagram.svg"
-                        alt=""></a></li>
-            <li class="ms-3"><a class="text-body-secondary"
-                    href="https://www.facebook.com/profile.php?id=100093268903257"><img src="facebook.svg" alt=""></a>
-            </li>
-        </ul>
-
-
     </footer>
-
-
-
     <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
         crossorigin="anonymous"></script>
-
-
-
-
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
