--- a/Blog.html
+++ b/Blog.html
@@ -172,7 +172,7 @@
           </p>
 
           <nav class="blog-pagination" aria-label="Pagination">
-            <a class="btn btn-outline-primary rounded-pill" href="Blogs/EcoAware Insights Navigating the Environmental Landscape.html">Older</a>
+            <a class="btn btn-outline-primary rounded-pill" href="EcoAware Insights Navigating the Environmental Landscape.html">Older</a>
             <a class="btn btn-outline-secondary rounded-pill disabled" aria-disabled="true">Newer</a>
           </nav>
       </div>
@@ -237,16 +237,6 @@
       </a>
       <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Company, Inc</span>
     </div>
-
-    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-      <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24">
-            <use xlink:href="#twitter"></use>
-          </svg></a></li>
-      <li class="ms-3"><a class="text-body-secondary" href="Historical map.JPG"><img src="instagram.svg" alt=""></a>
-      </li>
-      <li class="ms-3"><a class="text-body-secondary"
-          href="https://www.facebook.com/profile.php?id=100093268903257"><img src="facebook.svg" alt=""></a></li>
-    </ul>
   </footer>
 
 </body>
