--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
             <div class="carousel-inner  pt-5">
                 <div class="carousel-item active ">
-                    <img src="ai-banner-bg.jpg" class="d-block w-100" alt="...">
+                    <img src="Images/Banner.jpg" class="d-block w-100" alt="...">
                 </div>
             </div>
             <div class="container-fluid  mx-auto">
@@ -118,7 +118,7 @@
                     <div class="col-lg-4 my-3">
 
                         <div class="card text-dark">
-                            <a href="6th_blog.html" class="card text-dark text-decoration-none">
+                            <a href="EcoAware Insights Navigating the Environmental Landscape.html" class="card text-dark text-decoration-none">
                                 <img src="https://media.istockphoto.com/id/517188688/photo/mountain-landscape.jpg?s=612x612&w=0&k=20&c=A63koPKaCyIwQWOTFBRWXj_PwCrR4cEoOw2S9Q7yVl8="
                                     class="card-img" alt="...">
                                 <div class="card-img-overlay">
@@ -133,14 +133,13 @@
                     <div class="col-lg-4 my-3">
 
                         <div class="card text-white">
-                            <a href="6th_blog.html" class="card text-white text-decoration-none">
+                            <a href="Geography Insightful Discovering the World One Place at a Time.html" class="card text-white text-decoration-none">
                             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_BNgzz_uTZKteGYqjA3Ww1yhIJGPL_S4ygXkm5Bm_NA&s"
                                 class="card-img" alt="...">
                             <div class="card-img-overlay">
                                 <h5 class="card-title"> <b>Blog</b></h5>
-                                <p class="card-text">Cultivating Green Minds: The Impact of Green Education and
-                                    Awareness Campaigns</p>
-                                <p class="card-text"><i>Published on October 3, 2023</i></p>
+                                <p class="card-text">Geography Insightful: Discovering the World One Place at a Time</p>
+                                <p class="card-text"><i>Published on August 27, 2023</i></p>
                             </div>
                         </a>
                         </div>
@@ -148,14 +147,13 @@
                     <div class="col-lg-4 my-3">
 
                         <div class="card text-white">
-                            <a href="6th_blog.html" class="card text-white text-decoration-none">
+                            <a href="GIS Insights Mapping the Digital Landscape.html" class="card text-white text-decoration-none">
                             <img src="https://media.istockphoto.com/id/610041376/photo/beautiful-sunrise-over-the-sea.jpg?s=612x612&w=0&k=20&c=R3Tcc6HKc1ixPrBc7qXvXFCicm8jLMMlT99MfmchLNA="
                                 class="card-img" alt="...">
                             <div class="card-img-overlay">
                                 <h5 class="card-title"> <b>Blog</b></h5>
-                                <p class="card-text">Cultivating Green Minds: The Impact of Green Education and
-                                    Awareness Campaigns</p>
-                                <p class="card-text"><i>Published on October 3, 2023</i></p>
+                                <p class="card-text">GIS Insights: Mapping the Digital Landscape</p>
+                                <p class="card-text"><i>Published on August 26, 2023</i></p>
                             </div>
                             </a>
                         </div>
