--- a/EcoAware Insights Navigating the Environmental Landscape.html
+++ b/EcoAware Insights Navigating the Environmental Landscape.html
@@ -94,7 +94,7 @@
               <a class="nav-link special-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link special-link" href="course.html">Courses</a>
+              <a class="nav-link special-link" href="Tutorial.html">Tutorials</a>
             </li>
             <ul class="navbar-nav ">
               <li class="nav-item dropdown">
